--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <a href="#">Daha Fazla</a>
                 </div>
             </div>
-            <div class="phone-1">
+            <div class="phone-2">
                 <div class="akıllı1">
                     <h3>Akıllı evler akıllı hizmetler</h3>
                     <p>
@@ -146,9 +146,10 @@
                 </div>
                 <div class="phone-img">
                     <img src="img/about2.webp" alt="hakkımzdaki fotolar" style="height: 60vh;" loading="lazy">
-                </div>
+                 </div>
             </div>
-            <div class="phone-1">
+            
+            <div class="phone-3">
                 <div class="phone-img">
                     <img src="img/about1.webp" alt="hakkımzdaki fotolar" style="height: 60vh;" loading="lazy">
                 </div>
@@ -244,7 +245,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>6
     </section>
 
     <footer>
@@ -260,7 +261,7 @@
                 </div>
                 </div>
                <div class="liste1"> 
-                <h4>Bağlıntılar</h4>
+                <h4>Bağlıntılar6</h4>
                 <ul>
                     <li><a href="#">Anasayfa</a></li>
                     <li><a href="#">Hakkımızda</a></li>
@@ -281,7 +282,7 @@
                 <h4>İletşim seçenekleri</h4>
                 <ul>
                     <li><a href="tel:+90 555 555 55 55">+90 555 555 55 55</a></li>
-                    <li><a href="mailto:urkıye@gmail.com">turkıye@gmail.com</a></li>
+                    <li><a href="mailto:turkıye@gmail.com">turkıye@gmail.com</a></li>
                     <div class="liste4">
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
